youtube 상세 조회 변경 및 등록 수정 변수 변경 (#30)
